Update of style to correct left margin (alignment)

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ h1{
     width:300px;
     padding:20px;
     border-radius:25px;
-    text-align:center;
 }
 
 footer {
